# levelsetpy

./: .gitignore  LICENSE  MURMURATIONS_SCIENTIFIC_PLAN.md  README.md  __init__.py  capstosmalls.sh  requirements.txt  setup.m  setup.py  turns.md  tutorial.py  voronoi.ipynb
monte_carlo/: .gitignore  MURMURATIONS.md  PYTORCH_IMPLEMENTATION.md  README.md  README_neurips.md  __init__.py  depends.sh  make_pub_figures.py  pyproject.toml  requirements.txt  test_murmurations_audit.py  test_option3_final.py
monte_carlo/backends/: numpy_engine.py
monte_carlo/dynamics/: __init__.py  dubins_jax.py  dubins_python.py  murmuration_jax.py  murmuration_torch.py  rocket_jax.py  rocket_python.py
monte_carlo/examples/: ex_dubins_3d_comparison.py  ex_manufacturing_dispatch.py  ex_multiagent_scalability.py  ex_murmuration.py  ex_murmuration_torch.py  ex_rockets.py  ex_rockets_3d_comparison.py  run_distributed_demo.sh
monte_carlo/src/: __init__.py  config.py  gpu_distribution.py  heat_solver.py  hj_sampler.py  hjpde_solver.py  output_handler.py  topology.py
monte_carlo/src/hamiltonians/: dubins.py  (+4 more)
monte_carlo/tests/: __init__.py  test_murmuration_safety.py
monte_carlo_icml/: README.md  approxreach.ipynb  pyproject.toml
monte_carlo_icml/examples/: README.md  ex_dubins.py
monte_carlo_icml/notebooks/: results.ipynb
monte_carlo_icml/src/: config.py  diagnostics.py  hj_sampler.py  hjpde_solver.py  initial_conditions.py  transforms.py
monte_carlo_icml/tests/: conftest.py  test_heat_solver.py  test_transforms.py  test_validation.py
monte_carlo_icml/utils/: finite_difference.py
(+585 files in other folders)
