[project]
name = "hj-reach-murmuration"
version = "0.2.0"
description = "HJ-Gauss Monte Carlo reachability: 1M-bird aerial murmuration safety with 4D Dubins agents"
authors = [{name = "Lekan Molu", email = "lekan.molu@amazon.com"}]
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.4.0",
    "jaxlib>=0.4.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "levelsetpy==0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist", "black", "isort"]
gpu = ["jax[cuda12]"]
cpu = ["jax"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
addopts = "-v --tb=short"