[project]
name = "hj-reach-sample"
version = "0.1.0"
description = "Sampling-based Hamilton-Jacobi reachability via quasi-linearized Cole-Hopf"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.4.0",
    "jaxlib>=0.4.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "levelsetpy==0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-xdist"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]